app/assets/stylesheets/admin.css.scss
@import "bourbon";
@import "themes/default";

$admin-bar-bg: #eee;
$admin-bar-border: darken($admin-bar-bg,6%);

body.admin {
  overflow: hidden;

  label {
    font-size: 16px;
    color: #fff;
    font-weight: bold;
    margin: 0 8px 0 0;
  }

  #blog-button { opacity: 0;
    &:hover { opacity: 1; }}

  &.moving {
    #blog-button,
    #save-button { opacity: 1; }
  }
}

body.edit #admin {
  #content-fieldset {
    visibility: visible;
  }
}

#content-fieldset {
  position: relative;
  border: none;
  margin: 10px 0 0;
  padding: 0;
  visibility: hidden;
  width: 100%;
}

#save-button {
  background: #fff;
  width: 12px;
  height: 12px;
  display: inline-block;
  position: absolute;
  bottom: 20px;
  right: 20px;
  z-index: 10000;
  border: none;
  @include border-radius(8px);

  &.dirty, &:hover {background:#ccc;}
  &.saving {background:#ccba40;}
  &.saved {background:#76be6a;}
  &.error {background:#bc3c2b;}
}

#admin {
  background: #fff;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;

  #text-title {
    margin: 20px 0 0;

    pre,
    textarea {
      text-align: left;
    }
  }

  #posts {
    position: absolute;
    top: 0;
    left: -12px;
    width: 100%;
    padding-top: 112px;
  }

  .col {
    width: 50%;
    float: left;
    padding: 0;
    overflow: hidden;

    &.active {
      h2 {
      }
    }

    h2 {
      font-size: 18px;
      padding: 4px 7px;
      margin: 0 0 0 6px;
      color: #999;
      text-transform: uppercase;
      display: inline-block;
    }

    ul {
      margin: 0 -20px 0 0;
      padding: 0 30px 80px 12px;
      list-style: none;
      overflow: scroll;
    }

    li {
      position: relative;
      line-height: 1.2em;
      text-overflow: ellipsis;
      max-height: 8.4em;
      margin-bottom: .8em;
      @include transition(all .1s linear);

      &.hidden {
        max-height: 0;
        margin-bottom: 0;
        overflow: hidden;

        a {
          opacity: 0;
        }
      }

      &.selected {
        &:before {
          content: "\f0da";
          font-family: FontAwesome;
          display: block;
          color: #aaa;
          position: absolute;
          top: .1em;
          left: -12px;
          font-size: 14px;
        }

        a {
          position: relative;
          color: #222;
          font-weight: bold;
        }
      }

      &:hover .links {
        visibility: visible;
      }
    }

    a {
      margin: 0;
      font-size: 14px;
      max-width: 100%;
      max-height: 8.8em;
      overflow: hidden;
      text-overflow: ellipsis;
      border: none;
      display: block;
      color: #888;
      padding: 0;
      opacity: 1;
      margin-bottom: 4px;
      @include transition(color .1s linear);

      &:hover {color: #222;}
    }
  }

  textarea,pre {
    margin: -3px 0; /* not sure why but prevents a slight scroll on multiline titles */
    padding: 3px 0;
    outline: 0;
    border: 0;
  }

  .expandingArea {
    position: relative;
  }

  .expandingArea > textarea,
  .expandingArea > pre {
    background: transparent;
    white-space: pre-wrap;
  }

  .expandingArea > textarea {
    /* The border-box box model is used to allow
     * padding whilst still keeping the overall width
     * at exactly that of the containing element.
     */
    @include box-sizing(border-box);
    width: 100%;
    pointer-events: auto;
  }

  .expandingArea.active > textarea {
    /* Hide any scrollbars */
    overflow: hidden;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    /* Remove WebKit user-resize widget */
    resize: none;
  }

  .expandingArea > pre {
    display: none;
  }

  .expandingArea.active > pre {
    display: block;
    /* Hide the text; just using it for sizing */
    visibility: hidden;
  }
}

form .permalink {
 position: absolute;
 left: -34px;
 top: 12px;
 border: none;
 color: #ddd;
}

.transition {
  .split-section,
  #bar {@include transition(all .2s ease-out);}
}

.split-section {
  height: 100%;
  position: fixed;
  width: 50%;

  .inner {
    padding: 10px 20px;
  }
}

#post-editor {
  padding: 0;
  overflow: auto;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  position: absolute;

  .inner {
    padding-right: 0;
    padding-left: 0;
  }
}

#post-preview {
  background: #f0f4fc;
  border-left: 1px solid #dbe3f1;
  right: -50%;
  overflow: hidden;
  overflow-y: auto;

  .inner {
    width: auto;
  }
}

#admin.preview {
  #post-editor {
    padding: 0 20px;
    margin: 0;
    width: 50%;
    left: 0;

    .inner {
      margin: 0;
      width: auto;
    }
  }

  #post-preview {
    right: 0;
    z-index: 12;
  }

  #post_content:before {top: 0;}
  #post_content:before,
  #post_content:after {
    width: 100%;
  }
}

.preview #bar {
  left: -70px;
  cursor: pointer;

  &:hover {
    background: #ccc;
  }
}

#bar {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  z-index: 11;
  opacity: 1;
  width: 80px;
  min-height: 400px;
  padding: 20px 0;
  background: $admin-bar-bg;
  border-right: 1px solid $admin-bar-border;

  &.shy {
    opacity: 0 !important;
  }

  a {
    margin: 0 10px 18px;
    line-height: 1.9em;
    font-size: 12px;
    color: darken($admin-bar-bg, 35%);
    border: none;
    display: block;
    text-align: center;
  }

  .middle {
    position: absolute;
    top: 50%;
    left: 0;
    margin-top: -85px;
    width: 100%;
    height: 148px
  }

  .bottom {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
  }

  .menu:hover .sub-menu {
    display: block;
  }

  .menu {
    position: relative;
  }

  .sub-menu {
    display: none;
    position: absolute;
    top: -78px;
    left: 79px;
    padding: 10px 15px;
    background: $admin-bar-bg;
    border: 1px solid $admin-bar-border;
    border-left: none;
    @include border-right-radius(5px);

    li {
      list-style: none;
      line-height: 1em;
      margin: 0;
      padding: 4px 0;

      a {
        display: block;
        width: 200px;
        text-align: left;
      }

      span {
        font-size: 12px;
        display: block;
        margin: 6px 0 8px;
      }
    }

    label {
      font-size: 12px;
      font-weight: bold;
      color: #999;
      display: block;
      margin: 0 0 6px 0;
      text-transform: uppercase;
    }

    input[type=text] {
      border: none;
      padding: 6px;
      margin: 0 0 8px 0;
      font-size: 14px;
      width: 280px;

      &:focus {
        box-shadow: none;
      }
    }
  }
}


[class^="icon-"]:before, [class*=" icon-"]:before {
  display: block;
  font-size: 24px;
}

#line-height {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
}

#fade {
  pointer-events: none;
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: 10;
}

/* fade to white */
#fade:before,
#fade:after {
  content: "";
  display: block;
  position: fixed;
  top: 0;
  height: 1.5em;
  width: 100%;
  pointer-events: none;
  background-image: -webkit-gradient( linear, left top, left bottom, from(
      rgba(255, 255, 255, 1)), to(
      rgba(255, 255, 255, 0))
    );
  background-image: -moz-linear-gradient(
      to bottom,
      rgba(255, 255, 255, 1),
      rgba(255, 255, 255, 0)
    );
}

#fade:after {
  top: auto;
  bottom: 0 ;
  background-image: -webkit-gradient( linear, left bottom, left top, from(
      rgba(255, 255, 255, 1)), to(
      rgba(255, 255, 255, 0))
    );
  background-image: -moz-linear-gradient(
      to top,
      rgba(255, 255, 255, 1),
      rgba(255, 255, 255, 0)
    );
}

